@@ -21,7 +21,9 @@ requires "Throwable::Error" => "0";
 requires "Try::Tiny" => "0";
 requires "URI" => "0";
 requires "lib" => "0";
-requires "perl" => "5.010";
+requires "namespace::autoclean" => "0";
+requires "namespace::clean" => "0";
+requires "perl" => "5.008";
 requires "strict" => "0";
 requires "warnings" => "0";
 
@@ -38,7 +40,6 @@ on 'test' => sub {
   requires "Test::More" => "0.96";
   requires "Test::Number::Delta" => "0";
   requires "base" => "0";
-  requires "perl" => "5.010";
   requires "utf8" => "0";
 };
 
@@ -48,27 +49,35 @@ on 'test' => sub {
 
 on 'configure' => sub {
   requires "ExtUtils::MakeMaker" => "0";
-  requires "perl" => "5.010";
 };
 
 on 'develop' => sub {
   requires "Code::TidyAll::Plugin::SortLines::Naturally" => "0";
+  requires "Code::TidyAll::Plugin::Test::Vars" => "0.02";
   requires "File::Spec" => "0";
   requires "IO::Handle" => "0";
   requires "IPC::Open3" => "0";
-  requires "Perl::Critic" => "1.123";
-  requires "Perl::Tidy" => "20140711";
+  requires "Parallel::ForkManager" => "1.19";
+  requires "Perl::Critic" => "1.126";
+  requires "Perl::Tidy" => "20160302";
   requires "Pod::Coverage::Moose" => "0";
   requires "Pod::Coverage::TrustPod" => "0";
+  requires "Pod::Wordlist" => "0";
   requires "Test::CPAN::Changes" => "0.19";
+  requires "Test::CPAN::Meta::JSON" => "0.16";
+  requires "Test::CleanNamespaces" => "0.15";
   requires "Test::Code::TidyAll" => "0.50";
   requires "Test::EOL" => "0";
-  requires "Test::More" => "0.88";
+  requires "Test::Mojibake" => "0";
+  requires "Test::More" => "0.96";
   requires "Test::NoTabs" => "0";
   requires "Test::Pod" => "1.41";
   requires "Test::Pod::Coverage" => "1.08";
   requires "Test::Portability::Files" => "0";
   requires "Test::Spelling" => "0.12";
   requires "Test::Synopsis" => "0";
-  requires "Test::Version" => "1";
+  requires "Test::Vars" => "0.009";
+  requires "Test::Version" => "2.05";
+  requires "blib" => "1.01";
+  requires "parent" => "0";
 };
