@@ -1,7 +1,7 @@
 severity = 3
 verbose = 11
-
 theme = core + pbp + bugs + maintenance + cosmetic + complexity + security + tests + moose
+program-extensions = pl psgi t
 
 exclude = Subroutines::ProhibitCallsToUndeclaredSubs
 
@@ -19,21 +19,6 @@ functions = :builtins
 exclude_functions = sleep
 severity = 3
 
-[Moose::RequireCleanNamespace]
-modules = Moose Moose::Role MooseX::Role::Parameterized Moose::Util::TypeConstraints
-cleaners = namespace::autoclean
-
-[NamingConventions::Capitalization]
-package_exemptions = [A-Z]\w+|minFraud
-file_lexical_variables = [A-Z]\w+|[^A-Z]+
-global_variables = :starts_with_upper
-scoped_lexical_variables = [A-Z]\w+|[^A-Z]+
-severity = 3
-
-# Given our code base, leaving this at 5 would be a huge pain
-[Subroutines::ProhibitManyArgs]
-max_arguments = 10
-
 [RegularExpressions::ProhibitComplexRegexes]
 max_characters = 200
 
@@ -42,7 +27,6 @@ severity = 3
 
 [Subroutines::ProhibitUnusedPrivateSubroutines]
 private_name_regex = _(?!build)\w+
-skip_when_using = Moo::Role Moose::Role MooseX::Role::Parameterized Role::Tiny Test::Class::Moose::Role
 
 [TestingAndDebugging::ProhibitNoWarnings]
 allow = redefine
@@ -57,18 +41,14 @@ severity = 3
 severity = 3
 
 [Variables::ProhibitPackageVars]
-add_packages = Test::Builder
+add_packages = Carp Test::Builder
 
-[TestingAndDebugging::RequireUseStrict]
+[-Subroutines::RequireFinalReturn]
 
-[TestingAndDebugging::RequireUseWarnings]
-
-[-ControlStructures::ProhibitCascadingIfElse]
+# This incorrectly thinks signatures are prototypes.
+[-Subroutines::ProhibitSubroutinePrototypes]
 
 [-ErrorHandling::RequireCarping]
-[-InputOutput::RequireBriefOpen]
-
-[-ValuesAndExpressions::ProhibitConstantPragma]
 
 # No need for /xsm everywhere
 [-RegularExpressions::RequireDotMatchAnything]
@@ -78,7 +58,13 @@ add_packages = Test::Builder
 # http://stackoverflow.com/questions/2275317/why-does-perlcritic-dislike-using-shift-to-populate-subroutine-variables
 [-Subroutines::RequireArgUnpacking]
 
-[-Subroutines::RequireFinalReturn]
-
 # "use v5.14" is more readable than "use 5.014"
 [-ValuesAndExpressions::ProhibitVersionStrings]
+
+# Explicitly returning undef is a _good_ thing in many cases, since it
+# prevents very common errors when using a sub in list context to construct a
+# hash and ending up with a missing value or key.
+[-Subroutines::ProhibitExplicitReturnUndef]
+
+# Sometimes I want to write "return unless $x > 4"
+[-ControlStructures::ProhibitNegativeExpressionsInUnlessAndUntilConditions]
