@@ -1,26 +1,37 @@
-[PerlTidy]
-diff_on_tidy_error = 1
-select = **/*.{pl,pm,t,psgi}
-ignore = t/00-*
-ignore = t/author-*
-ignore = t/release-*
-ignore = blib/**/*
-ignore = .build/**/*
-ignore = GeoIP2-*/**/*
-ignore = maxmind-db/**/*
-argv = --profile=$ROOT/perltidyrc
-
 [PerlCritic]
 select = **/*.{pl,pm,t,psgi}
+ignore = .build/**/*
+ignore = GeoIP2-*/**/*
+ignore = blib/**/*
+ignore = maxmind-db/**/*
 ignore = t/00-*
 ignore = t/author-*
 ignore = t/release-*
-ignore = blib/**/*
+ignore = t/zzz-*
+ignore = xt/**/*
+argv = --profile=$ROOT/perlcriticrc
+
+[PerlTidy]
+select = **/*.{pl,pm,t,psgi}
 ignore = .build/**/*
 ignore = GeoIP2-*/**/*
+ignore = blib/**/*
 ignore = maxmind-db/**/*
-argv = --profile $ROOT/perlcriticrc --program-extensions .pl  --program-extensions .t --program-extensions .psgi
+ignore = t/00-*
+ignore = t/author-*
+ignore = t/release-*
+ignore = t/zzz-*
+ignore = xt/**/*
+argv = --profile=$ROOT/perltidyrc
 
-[SortLines::Naturally]
-diff_on_tidy_error = 1
-select = .stopwords
+[Test::Vars]
+select = **/*.pm
+ignore = .build/**/*
+ignore = GeoIP2-*/**/*
+ignore = blib/**/*
+ignore = maxmind-db/**/*
+ignore = t/00-*
+ignore = t/author-*
+ignore = t/release-*
+ignore = t/zzz-*
+ignore = xt/**/*
