@@ -5,6 +5,11 @@
 - The enterprise() method on GeoIP2::Database::Reader now supports GeoIP2
   Precision Enterprise databases.
 
+[ OTHER ]
+
+- namespace::autoclean is now used to remove imported functions from class
+  namespaces.
+
 
 2.003002 2016-11-21
 
